[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.216", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tempfile = "3.14.0"
assert_cmd = "2.0.16"
predicates = "3.1.2"
walkdir = "2.5.0"
